--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="learn_words_name">Learn Words</string>
     <string name="gr_book_name">Grammar Book</string>
     <string name="gr_practice_name">Grammar Practice</string>
+    <string name="word_transl_name">Word-Translation</string>
 </resources>
