--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="gr_book_name">Grammar Book</string>
     <string name="gr_practice_name">Grammar Practice</string>
     <string name="word_transl_name">Word-Translation</string>
+    <string name="transl_word_name">Translation-Word</string>
     <string name="incorrect_toast">Incorrect!</string>
     <string name="correct_toast">Correct!</string>
 </resources>
