--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Project v.0.0.1</string>
+    <string name="app_name">Project Alme</string>
     <string name="dict_name">My Dictionaries</string>
     <string name="learn_words_name">Learn Words</string>
     <string name="gr_book_name">Grammar Book</string>
