--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,10 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="my_dictionary">My Dictionary</string>
+    <string name="learn_words">Learn Words</string>
+    <string name="reading">Reading</string>
+    <string name="settings">Settings</string>
+    <string name="log_out">Log Out</string>
+    <string name="element_text">Text</string>
 </resources>
