--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,10 @@
     <string name="no">No</string>
     <string name="maybe">Maybe</string>
 
+    <string name="result_text">%1$d of %2$d words are correct!</string>
+    <string name="try_again">Try again</string>
+    <string name="another_test">Another test</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="my_dictionary">My Dictionary</string>
@@ -29,4 +33,6 @@
     <string name="settings">Settings</string>
     <string name="log_out">Log Out</string>
     <string name="element_text">Text</string>
+
+    <string name="question">%1$d of %2$d words are correct!</string>
 </resources>
